[package]
name = "reticulum"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/BeechatNetworkSystemsLtd/Reticulum-rs"
categories = ["network-programming"]
keywords = ["reticulum", "mesh", "radio", "async"]

description = """
Reticulum-rs is a Rust implementation of the Reticulum Network Stack - a cryptographic,
decentralised, and resilient mesh networking protocol designed for communication over any physical
layer.

This project brings Reticulum's capabilities to the Rust ecosystem, enabling embedded, and
constrained deployments with maximum performance and minimal dependencies.
"""

[dependencies]

# Protobuf and gRPC
tonic = { version = "0.13.0", optional = true }
prost = { version = "0.13.5", optional = true }

# Crypto
crypto-common = { version = "0.1.6", default-features = false, features = ["rand_core"] }
aes = { version = "0.8.4", default-features = false }
cbc = { version = "0.1.2", default-features = false, features = ["block-padding"] }
x25519-dalek = { version = "2.0.1", default-features = false, features = ["static_secrets"] }
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["rand_core"] }
hkdf = { version = "0.12.4", default-features = false }

# Hash
hmac = { version = "0.12.1", default-features = false }
sha2 = { version = "0.10.8", default-features = false }

# Random Number generator
rand_core = { version = "0.6.4", default-features = false }

# Async IO (std-only)
tokio = { version = "1.44.2", features = ["full"], optional = true }
tokio-stream = { version = "0.1.17", optional = true }
tokio-util = { version = "0.7.15", optional = true }

rmp = { version = "0.8.14", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["derive", "alloc"] }

# Logging
log = { version = "0.4.27", optional = true }
env_logger = { version = "0.10", optional = true }

# Embedded / ESP32-S3
esp-hal = { version = "0.23", features = ["esp32s3"], optional = true }
esp-hal-embassy = { version = "0.6", features = ["esp32s3"], optional = true }
esp-backtrace = { version = "0.15", features = ["esp32s3", "panic-handler", "println"], optional = true }
esp-println = { version = "0.13", features = ["esp32s3", "log"], optional = true }
embassy-executor = { version = "0.7", optional = true }
embassy-time = { version = "0.4", optional = true }
embassy-sync = { version = "0.8", optional = true }
futures = { version = "0.3.30", default-features = false, features = ["async-await", "alloc"], optional = true }
xtensa-lx-rt = { version = "0.21", optional = true }

[features]
default = []
std = ["alloc", "dep:tokio", "dep:tokio-stream", "dep:tokio-util", "dep:env_logger", "dep:tonic", "dep:prost", "dep:log", "rand_core/getrandom", "serde/std"]
alloc = []
fernet-aes128 = []
embedded = ["alloc", "dep:esp-hal", "dep:esp-hal-embassy", "dep:esp-backtrace", "dep:esp-println", "dep:embassy-executor", "dep:embassy-time", "dep:embassy-sync", "dep:futures", "dep:xtensa-lx-rt", "dep:log"]

[build-dependencies]
tonic-build = "0.13.0"

[target.'cfg(not(target_arch = "xtensa"))'.dev-dependencies]
tokio = { version = "1.44.2", features = ["test-util"] }
criterion = "0.5.1"

[[bench]]
name = "transport"
harness = false
required-features = ["std"]

[[example]]
name = "tcp_server"
path = "examples/tcp_server.rs"

[[example]]
name = "tcp_client"
path = "examples/tcp_client.rs"

[[example]]
name = "udp_link"
path = "examples/udp_link.rs"

[[example]]
name = "link_client"
path = "examples/link_client.rs"

[[example]]
name = "kaonic_client"
path = "examples/kaonic_client.rs"

[[example]]
name = "testnet_client"
path = "examples/testnet_client.rs"

[[example]]
name = "kaonic_tcp_mesh"
path = "examples/kaonic_tcp_mesh.rs"

[[example]]
name = "kaonic_mesh"
path = "examples/kaonic_mesh.rs"

[[example]]
name = "multihop"
path = "examples/multihop.rs"

[[bin]]
name = "my_code_demo"
path = "src/bin/my_code_demo.rs"
required-features = ["std"]
