[package]
name    = "hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal          = { version = "0.23", features = ["esp32s3"] }
esp-hal-embassy  = { version = "0.6", features = ["esp32s3"] }
esp-backtrace    = { version = "0.15", features = ["esp32s3", "panic-handler", "println"] }
esp-println      = { version = "0.13", features = ["esp32s3", "log"] }
embassy-executor = { version = "0.7", features = ["task-arena-size-20480"] }
embassy-time     = "0.4"

[profile.release]
lto           = "fat"
codegen-units = 1
opt-level     = "s"
debug         = true
